--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,6 @@ script:
 - imptest test
 before_install:
 - openssl aes-256-cbc -K $encrypted_68f480256ac2_key -iv $encrypted_68f480256ac2_iv
+  -in .gitcreds.enc -out .gitcreds -d
+- openssl aes-256-cbc -K $encrypted_68f480256ac2_key -iv $encrypted_68f480256ac2_iv
   -in keys.nut.enc -out keys.nut -d
